@@ -1015,8 +1015,8 @@ data.frame <-
         if(N > nrows)
             stop(gettextf("replacement has %d rows, data has %d", N, nrows),
                  domain = NA)
-        if(N < nrows && N > 0L)
-            if(nrows %% N == 0L && length(dim(value)) <= 1L)
+        if (N < nrows)
+            if (N > 0L && (nrows %% N == 0L) && length(dim(value)) <= 1L)
                 value <- rep(value, length.out = nrows)
             else
                 stop(gettextf("replacement has %d rows, data has %d", N, nrows),
