@@ -2385,3 +2385,11 @@ cor.test(c(1, 2, 3, 4, 5), c(8, 6, 7, 5, 3), method = "spearman",
 cor.test(c(1, 2, 3, 4, 5), c(8, 6, 7, 5, 3), method = "spearman",
          exact = FALSE, continuity = TRUE)
 ## Kendall case is wish of PR#13691
+
+
+## corrupt data frame, PR#13724
+foo <- matrix(1:12, nrow = 3)
+bar <- as.data.frame(foo)
+try(bar$NewCol <- foo[foo[, 1] == 4, 4])
+## succeeded but gave corrupt result in 2.9.0
+
